Added Web API CategoriesController
Added Web API CategoriesController, MVC HomeController with the
corresponding Index page

--- a/PiggyBankMvcClient/Web.config
+++ b/PiggyBankMvcClient/Web.config
@@ -49,7 +49,12 @@
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
-  </system.webServer>
+  <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers></system.webServer>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -61,8 +66,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="PiggyBankContext"
-          providerName="System.Data.SqlClient"
-          connectionString="Server=(LocalDb)\MSSQLLocalDB;Database=PiggyBank;Integrated Security=True;"/>
+    <add name="PiggyBankContext" providerName="System.Data.SqlClient" connectionString="Server=(LocalDb)\MSSQLLocalDB;Database=PiggyBank;Integrated Security=True;" />
   </connectionStrings>
 </configuration>
